# arithmetic

./: .gitignore  LICENSE  README.md  abacus.py  arithmetic_eval_quicker.py  create_data_split.py  create_pos_or_variants.py  dataset_analysis.py  gen_eval_script.py  load_local_model.py  pretrain.py  pretty_plotter.py  pretty_plotter_big.py  pretty_plotter_sort.py  setup.cfg  sort_eval.py  upload_processed_dataset.py
cramming/: __init__.py  utils.py
cramming/architectures/: attention.py  components.py  construction.py  crammed_depthrecurrent.py  crammed_transformer.py  embeddings.py  huggingface_interface.py  losses.py
cramming/backend/: __init__.py  prepare_backend.py  torch_default.py  utils.py
cramming/backend/optimizers/: __init__.py  schedulers.py
cramming/config/: cfg_eval.yaml  cfg_pretrain.yaml
cramming/config/arch/: albert.yaml  crammed-depthrecurrent.yaml  crammed-fakeRNN.yaml  crammed-janus.yaml  crammed-rnn.yaml  crammed-stack-janus.yaml  crammed-tiny.yaml  crammed-transformer.yaml  gpt2-base.yaml  hf-gpt2.yaml  sanitycheck.yaml
cramming/config/data/: arithmetic.yaml  c4-subset-processed.yaml  openweb.yaml  proofpile.yaml  sanity-check-1.yaml  sanity-check-2.yaml
cramming/config/data/sources/: arithmetic.yaml  local.yaml  openwebtext.yaml  proofpiledata.yaml
cramming/config/eval/: pythia.yaml
cramming/config/eval/tasks/: lambada_openai.yaml  winogrande.yaml
cramming/config/impl/: _default.yaml  torch-default.yaml
cramming/config/train/: common.yaml  cramming.yaml  janus-regime.yaml
cramming/config/wandb/: default.yaml
cramming/data/: __init__.py  arithmetic_tokenizers.py  curriculum_sorting.py  pretraining_preparation.py  tokenizer_preparation.py
shells/: addition_ff.sh  addition_lt.sh  bitwise_or.sh  evaluation.sh  generate_and_tokenize_data.sh  multiplication.sh  sorting.sh
