

[metadata]
name = cramming
version = 0.1.0
author = Sean McLeish
author_email = smcleish@umd.edu
url = https://github.com/mcleish7/arithmetic
description = Fork of cramming for next token predicition
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
platform = any
keywords = Machine Learning, Language Modeling
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
homepage = "https://github.com/mcleish7/arithmetic"
repository = "https://github.com/mcleish7/arithmetic"
documentation = """

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.10
packages = find:

setup_requires =
    setuptools

install_requires =
    torch >= 2.0.0
    hydra-core >= 1.1
    datasets
    tokenizers
    transformers
    evaluate
    scipy
    scikit-learn # for metrics
    pynvml
    psutil
    einops
    safetensors
    apache-beam  # only used for wikipedia ...
    zstandard    # only used for the Pile
    wandb # if you want to use it
    matplotlib==3.8.3 # the versions of plt and sns are fixed for annotating the heatmaps
    seaborn==0.13.2
    opencv-python

scripts =
  pretrain.py
  arithmetic_eval_quicker.py

[options.package_data]
* =  "*.yaml", "*.txt"


[check-manifest]
ignore =
    .ipynb
    .sh


#basically the pytorch flake8 setting from https://github.com/pytorch/pytorch/blob/master/.flake8
[flake8]
select = B,C,E,F,P,T4,W,B9
max-line-length = 140
# C408 ignored because we like the dict keyword argument syntax
# E501 is not flexible enough, we're using B950 instead
ignore =
    E203,E305,E402,E501,E721,E741,F405,F821,F841,F999,W503,W504,C408,E302,W291,E303,
per-file-ignores = __init__.py: F401 torch/utils/cpp_extension.py: B950
optional-ascii-coding = True
exclude =
    .git,
    __pycache__,
    scripts,
    tables,
    outputs,
    *.pyi
